# componentAgent

./: .dockerignore  .env.example  Dockerfile  IMPLEMENTATION_GUIDE.md  README.md  claude.md  docker-compose.yml  pyproject.toml
scripts/: test_lcsc.py
src/: __main__.py  clients.py  models.py  parsers.py  server.py
swaggerFile/: V1.json
tests/: test_digikey.py  test_mouser.py  test_server_tools.py
